test/parsing/vass/wrong-unended-string-4.chpl

writeln('Unended single-quoted string w/backslash \